<resources>
    <string name="app_name">CubaFood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CUBA FOOD</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="burger">Бургеры</string>
    <string name="sandwich">Сэндвичи</string>
    <string name="grill">Гриль</string>
    <string name="tandoor">Тандыр</string>
    <string name="ingredients">Ингридиенты</string>
    <string name="sovet">Тонкости</string>
    <string name="todo">TODO</string>
    <string name="main_text_size">Размер основного текста</string>
    <string name="main_text">Настройка текста</string>
    <string name="burger_1">Самый большой и вкусный бургер.\n\t\t\t\t\t\t\t\t
        Правило укладки сверху - вниз\n
        \n
        - \t Домашняя Бургерная булочка 150 гр\n
        - \t Красный пикантный соус 30 гр \n\n
        - \t Сырокопчёная грудинка 15 гр\n
        - \t Обжаренное на гриле филе свинины 20 гр\n
        - \t Кольца красного лука 15гр\n
        - \t Сыр чеддер 15 гр\n
        - \t Сочная рубленная котлета 140 гр(Свинина - Говядина)\n
        - \t Помидоры 25 гр\n
        - \t Листья салата или пекинской капусты  30 гр \n
        - \t Сливочный белый соус  30 гр\n
        \n
        Соусы обязательно на булочку. Обжариваем
        котлету и ломтики свинины на гриле около 4 минут.
        Булочку можно купить готовую или\n
        испечь самому (В разделе ингредиенты).\n
        Так же необходимо слегка обжарить булку на отрезанной стороне.\n
        ПРИЯТНОГО АППЕТИТА!!!

</string>
    <string name="burger_2">\t\t\t\t\t\t\t\tЧикен-Берг\n
        \n
     Правило укладки сверху - вниз\n
        \n
   - \t Домашняя Бургерная булочка 100гр\n
   - \t Красный пикантный соус 15 гр\n
   - \t Кольца красного лука 15гр\n
   - \t Сыр чеддер 15 гр\n
   - \t Сочная рубленная котлета 120гр\n (куриная грудка)\n
   - \t Помидоры 25 гр\n
   - \t Листья салата или пекинской капусты  30 гр \n
   - \t Сливочный белый соус   30 гр\n
        \n
   Соусы обязательно на булочку. Обжариваем
   котлету на гриле около 4 минут.
   Булочку можно купить готовую или\n
   испечь самому (В разделе ингредиенты).\n
   Так же необходимо слегка обжарить булку на отрезанной
   стороне предварительно помазав растительным маслом.\n
   ПРИЯТНОГО АППЕТИТА!!!
</string>
    <string name="burger_3">\t\t\t\t\t\t\t\tПлескавица\n
        \n
    Правило укладки сверху - вниз\n
        \n
    - \t Домашняя булочка Самон 100 гр\n
    - \t Красный пикантный соус 30 гр \n
    - \t Кольца красного лука 15гр\n
    - \t Сыр чеддер 15 гр\n
    - \t Сочная рубленная котлета 100 гр\n (свинина-говядина)\n
    - \t Помидоры 25 гр\n
    - \t Листья салата или пекинской капусты  30 гр \n
    - \t Сливочный белый соус  30 гр\n
        \n
    Соусы обязательно на булочку. Обжариваем
    котлету на гриле около 4 минут.
    Булочку можно купить готовую или\n
    испечь самому (В разделе ингредиенты).\n
    Так же необходимо слегка обжарить булку на отрезанной
    стороне предварительно помазав растительным маслом.\n
ПРИЯТНОГО АППЕТИТА!!!
</string>
    <string name="burger_4">\t\t\t\t\t\t\t\tБерк-Окорок\n
        \n
    Правило укладки сверху - вниз\n
        \n
    - \t Домашняя булочка Самон 100 гр\n
    - \t Красный пикантный соус  30 гр \n
    - \t Кольца красного лука 15гр\n
    - \t Сыр чеддер 15 гр\n
    - \t Сочное феле хрустящего окорочка без кости 180гр\n
    - \t Помидоры 25 гр\n
    - \t Листья салата или пекинской капусты  30 гр \n
    - \t Сливочный белый соус  30 гр\n
        \n
    Соусы обязательно на булочку. Обжариваем
    окорок на гриле около 7 минут.\n
    Окорока без кости можно купить готовые\n
    или вырезать кость в самом доступном\n
    месте кухонными ножницами.\n
    Булочку можно купить готовую или\n
    испечь самому (В разделе ингредиенты)\n
    Так же необходимо слегка обжарить булку на отрезанной
    стороне предварительно помазав растительным маслом.\n
    ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="burger_5">\t\t\t\t\t\t\t\tПоло\n
        \n
Правило укладки сверху - вниз\n
        \n
- \t Домашняя Бургерная булочка\n
- \t Красный пикантный соус\n
- \t Кольца красного лука\n
- \t Сыр чеддер\n
- \t Сочный стейк из куриного филе\n
- \t Помидоры\n
- \t Листья салата или пекинской капусты\n
- \t Сливочный белый соус\n
        \n
Соусы обязательно на булочку. Обжариваем
филе на гриле около 7 минут.\n
Филе из куриной или индюшиной грудки\n
Булочку можно купить готовую или\n
испечь самому (В разделе ингредиенты)\n
Так же необходимо слегка обжарить булку на отрезанной
стороне предварительно помазав растительным маслом.\n
ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="burger_6">\t\t\t\t\t\t\t\tШкольник\n
        \n
Правило укладки сверху - вниз\n
        \n
    - \t Домашняя бургерная булочка 80 гр\n
    - \t Красный пикантный соус  30 гр \n
    - \t Кольца красного лука 15гр\n
    - \t Сочная рубленная котлета 80 гр\n (свинина-говядина)\n
    - \t Помидоры 15 гр\n
    - \t Листья салата или пекинской капусты  20 гр \n
    - \t Сливочный белый соус  30 гр\n
        \n
    Соусы обязательно на булочку. Обжариваем
    котлету на гриле около 4 минуты.\n
    Булочку можно купить готовую или\n
    испечь самому (В разделе ингредиенты)\n
    Так же необходимо слегка обжарить булку на отрезанной
    стороне предварительно помазав растительным маслом.\n
ПРИЯТНОГО АППЕТИТА!!!
</string>
    <string name="burger_7">\t\t\t\t\t\t\t\Веган\n
        \n
     Правило укладки сверху - вниз\n
        \n
   - \t Домашняя бургерная булочка 100 гр\n
   - \t Красный пикантный соус  30 гр \n
   - \t Кольца красного лука 15гр\n
   - \t Бальзамический соус 10 гр\n
   - \t Овощи запечённые на гриле 150 гр\n
   - \t Листья салата или пекинской капусты  20 гр \n
   - \t Сливочный белый соус   30 гр\n
        \n
   Соусы обязательно на булочку. Обжариваем
   овощи на гриле около 8 минуты.\n
   Булочку можно купить готовую или\n
   испечь самому (В разделе ингредиенты)\n
   Так же необходимо слегка обжарить булку на отрезанной
   стороне предварительно помазав растительным маслом.\n
   ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="sandwich_1">\t\t\t\t\t\t\t\Шеф\n
        \n
    Правило укладки сверху - вниз\n
        \n
    - \t Домашний тостовый багет 140гр\n
    - \t Красный пикантный соус 20 гр\n
    - \t Кольца красного лука 15гр\n
    - \t Сыр чеддер 15 гр\n
    - \t Маринованные огурцы 30гр\n
    - \t Помидоры 25 гр\n
    - \t Сливочный белый соус с трюфельным маслом  30 гр\n
    - \t Сочные обжаренные на гриле филе курица\n
    или свинины порезанные тонким слоем  140 гр \n
    - \t Листья салата или пекинской капусты  30 гр \n
    - \t Дежонская горчица     30 гр\n
        \n
    Соусы обязательно на багет. Обжариваем
    филе на гриле около 4 минут.\n
    Багет можно купить готовый (Мягкий не хрустящий) или\n
    испечь самому (В разделе ингредиенты).\n
    Так же необходимо слегка обжарить багет на отрезанной
    стороне предварительно помазав растительным маслом.\n
    ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="sandwich_2">\t\t\t\t\t\t\t\Гевара\n
        \n
    Правило укладки сверху - вниз\n
        \n
    - \t Домашний тостовый багет 140гр\n
    - \t Красный пикантный соус 20 гр\n
    - \t Кольца красного лука 15гр\n
    - \t Сыр чеддер 15 гр\n
    - \t Маринованные огурцы 30гр\n
    - \t Помидоры 25 гр\n
    - \t Сливочный белый соус с трюфельным маслом  30 гр\n
    - \t Хрустящая сырокопчёная грудинка\n
    Мироторг из говядины  80 гр\n
    - \t Сочные обжаренные на гриле филе курица\n
    или свинины порезанные тонким слоем  140 гр \n
    - \t Листья салата или пекинской капусты  30 гр \n
    - \t Дежонская горчица     30 гр\n
        \n
    Соусы обязательно на багет. Обжариваем
    филе и грудинку на гриле около 4 минут.\n
    Багет можно купить готовый (Мягкий не хрустящий) или\n
    испечь самому (В разделе ингредиенты).\n
    Так же необходимо слегка обжарить багет на отрезанной
    стороне предварительно помазав растительным маслом.\n
    ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="sandwich_3">\t\t\t\t\t\t\t\Гаванна\n
        \n
     Правило укладки сверху - вниз\n
        \n
   - \t Домашний тостовый багет 140гр\n
   - \t Красный пикантный соус 20 гр\n
   - \t Сыр чеддер 15 гр\n
   - \t Маринованные огурцы 30гр\n
   - \t Ломтики сочной ветчины 80 гр\n
   - \t Сочные обжаренные на гриле сырокопчёное филе\n
   свинины порезанные тонким слоем  140 гр \n
   - \t Сливочный белый соус с трюфельным маслом   30 гр\n
   - \t Листья салата или пекинской капусты  30 гр \n
   - \t Дежонская горчица  30 гр\n
        \n
   Соусы обязательно на багет. Обжариваем
   филе и ветчину на гриле около 2 минут.\n
   Багет можно купить готовый (Мягкий не хрустящий) или\n
   испечь самому (В разделе ингредиенты).\n
   Так же необходимо слегка обжарить багет на отрезанной
   стороне предварительно помазав растительным маслом.\n
   ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="sandwich_4">\t\t\t\t\t\t\t\Гурман\n
        \n
     Правило укладки сверху - вниз\n
        \n
   - \t Домашний тостовый багет 140гр\n
   - \t Красный пикантный соус 20 гр\n
   - \t Кольца красного лука 15гр\n
   - \t Сыр чеддер 15 гр\n
   - \t Помидоры 25 гр\n
   - \t Сливочный белый соус с трюфельным маслом   30 гр\n
   - \t Перепелиные яйца пожаренные на гриле   2 шт\n
   - \t Ломтики сочной ветчины 80 гр\n  80 гр\n
   - \t Сочные обжаренные на гриле грудинка\n
   мироторг бычка  140 гр \n
   - \t Листья салата или пекинской капусты  30 гр \n
   - \t Дежонская горчица  30 гр\n
        \n
   Соусы обязательно на багет. Обжариваем
   ветчину и грудинку на гриле около 4 минут.\n
   Багет можно купить готовый (Мягкий не хрустящий) или\n
   испечь самому (В разделе ингредиенты).\n
   Так же необходимо слегка обжарить багет на отрезанной
   стороне предварительно помазав растительным маслом.\n
   ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="sandwich_5">\t\t\t\t\t\t\t\Томат-Моцарелла\n
        \n
   Правило укладки сверху - вниз\n
        \n
    - \t Домашний тостовый багет 140гр\n
    - \t Красный пикантный соус 20 гр\n
    - \t Помидоры 60 гр\n
    - \t Бальзамический соус 30 гр\n
    - \t Сыр мацорелла 3 шт\n
    - \t Листья салата или пекинской капусты  30 гр \n
    - \t Сливочный белый соус  30 гр\n
        \n
    Соусы обязательно на багет.
    Моцарелла и помидор толстый слой\n
    Багет можно купить готовый (Мягкий не хрустящий) или\n
    испечь самому (В разделе ингредиенты).\n
    Так же необходимо слегка обжарить багет на отрезанной
    стороне предварительно помазав растительным маслом.\n
    ПРИЯТНОГО АППЕТИТА!!!

    </string>
    <string name="sandwich_6">\t\t\t\t\t\t\t\Варадеро\n
        \n
    Правило укладки сверху - вниз\n
        \n
    - \t Домашний тостовый багет 140гр\n
    - \t Красный пикантный соус 20 гр\n
    - \t Кольца красного лука 15гр\n
    - \t Сыр чеддер 15 гр\n
    - \t Помидоры 25 гр\n
    - \t Сливочный белый соус с трюфельным маслом  30 гр\n
    - \t Испанский сыровяленый свиной окорок ХАМОН  80 гр\n
    - \t Сочные обжаренные на гриле филе курица\n
    или свинины порезанные тонким слоем  140 гр \n
    - \t Листья салата или пекинской капусты  30 гр \n
    - \t Дежонская горчица     30 гр\n
        \n
    Соусы обязательно на багет.\n
    Обжариваем филе на гриле около 4 минут.\n
    Багет можно купить готовый (Мягкий не хрустящий) или\n
    испечь самому (В разделе ингредиенты).\n
    Так же необходимо слегка обжарить багет на отрезанной
    стороне предварительно помазав растительным маслом.\n
    ПРИЯТНОГО АППЕТИТА!!!

    </string>
</resources>